test/pif/negatives/external-block-dependency.peml
# Example of a nearly valid PIF that correctly forms a DAG, 
# but has a block referencing a dependency outside its blocklist scope.
# To fix this, remove 'randomg2b1's dependencies (making it a root),
# and instead, add those dependencies to its parent blocklist.

exercise_id: external_block_dependency_error
title: External Block Dependency Error
author: Cliff Shaffer
license.id: MIT
license.owner.name: Cliff Shaffer
license.owner.email: shaffer@vt.edu

tags.topics: PEML Demo Parsons Problem
tags.style: parsons, order

instructions:----------
Put the blocks in the proper order.
----------

[assets.code.blocks.content]
blockid: randomg1b1
display: Random Group 1 Block 1
depends:

blockid: randomg1b2
display: Random Group 1 Block 2
depends: randomg1b1

blockid: randomg1b3
display: Random Group 1 Block 3
depends: randomg1b2

blockid: list1 
depends: 
[.blocklist]
blockid: randomg2b1
display: Random Group 2 Block 1
depends: randomg1b3

blockid: randomg2b2
display: Random Group 2 Block 2
depends: randomg2b1

blockid: randomg2b3
display: Random Group 2 Block 3
depends: randomg2b2
[]
[]
